--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 Theme Name: VH
 Theme URI: https://github.com/JuriShimizu/wp-theme-vh
@@ -11,117 +10,134 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: calm, gentle, cleanliness
 Text Domain: VH
  */
-.font-lg {
-  font-size: 1.2rem; }
+
+.main-color {}
+.accent-color {}
+.font-lg { font-size: 1.2rem; }
 
 /* Reset */
 html {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 body {
   font-size: inherit;
   font-family: 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-color: #eee; }
+  background-color: #eee;
+}
 
 a {
-  color: #2980b9; }
+  color: #2980b9;
+}
 
 a:hover,
 a:focus,
 a:active {
   text-decoration: none;
-  color: #3498db; }
+  color: #3498db;
+}
 
-h1 {
-  font-size: 2.1rem; }
-
-h2 {
-  font-size: 1.9rem; }
-
-h3 {
-  font-size: 1.7rem; }
-
-h4 {
-  font-size: 1.5rem; }
-
-h5 {
-  font-size: 1.3rem; }
-
-h6 {
-  font-size: 1.1rem; }
+h1 { font-size: 2.1rem; }
+h2 { font-size: 1.9rem; }
+h3 { font-size: 1.7rem; }
+h4 { font-size: 1.5rem; }
+h5 { font-size: 1.3rem; }
+h6 { font-size: 1.1rem; }
 
 /* Original */
 header.site-header {
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 header.site-header,
 header.site-header h1,
 header.site-header a {
-  color: #333; }
+  color: #333;
+}
 
 header.site-header .links {
-  padding: 25px 0; }
+  padding: 25px 0;
+}
 
 header.site-header .links a {
   padding: 5px 10px;
   margin: 0 10px;
   display: inline-block;
-  border-bottom: 1px solid #333; }
+  border-bottom: 1px solid #333;
+}
 
 main.site-body {
-  min-height: 500px; }
+  min-height: 500px;
+}
 
 section.hero {
   background-image: url(./images/bg.jpg);
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+}
 
 section.hero .lay {
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, .5);
+}
 
 section.hero .lay h2 {
-  color: #fff; }
+  color: #fff;
+}
 
 body.home section.hero .lay {
-  padding: 60px; }
+  padding: 60px;
+}
 
 body.single section.hero .lay {
-  padding: 30px; }
+  padding: 30px;
+}
 
 article {
-  padding: 20px; }
+  padding: 20px;
+}
 
 article .title {
-  margin: 0; }
+  margin: 0;
+}
 
 footer {
-  padding: 50px 0; }
+  padding: 50px 0;
+}
 
 /* Helper */
-.divider-lg {
-  padding: 10px; }
-
-.divider {
-  padding: 5px; }
-
-.divider-sm {
-  padding: 3px; }
+.divider-lg { padding: 10px; }
+.divider { padding: 5px; }
+.divider-sm { padding: 3px; }
 
 .font-logo {
-  font-family: mplus-1p-regular; }
+  font-family: mplus-1p-regular;
+}
 
 .pre {
-  white-space: pre-wrap; }
+  white-space: pre-wrap;
+}
 
 .ellipsis {
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /* Override */
-@media (max-width: 767px) {
+
+
+@media (max-width: 991px) {
+}
+
+@media (max-width:767px) {
   html {
-    font-size: 12px; }
+    font-size: 12px;
+  }
+
   header.site-header .links {
-    text-align: center; } }
+    text-align: center;
+  }
+}
+
+
