--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -16,10 +16,10 @@ Text Domain: VH
 @import '_helper';
 
 header.site-header {
-  background-color: #fff;
+  border-bottom: 1px solid rgba(#fff, .3);
 
-  h1, a {
-    color: $color-base-darken;
+  h1, a, p {
+    color: #fff;
   }
 
   .links {
@@ -29,7 +29,7 @@ header.site-header {
       padding: 5px 10px;
       margin: 0 10px;
       display: inline-block;
-      border-bottom: 1px solid $color-base-darken;
+      border-bottom: 1px solid #fff;
     }
   }
 }
@@ -38,29 +38,33 @@ main.site-body {
   min-height: 500px;
 }
 
-section.hero {
-  background-image: url(./images/bg.jpg);
-  background-size: cover;
-  background-position: center;
+section {
+  &.hero {
+    background-image: url(./images/bg.jpg);
+    background-size: cover;
+    background-position: center;
 
-  .lay {
-    background-color: $lay-dark;
+    .lay {
+      background-color: $lay-dark;
 
-    h2 {
-      color: #fff;
+      h2 {
+        color: #fff;
+      }
     }
   }
 }
 
-body.home {
-  section.hero .lay {
-    padding: 60px;
+body {
+  &.home {
+    .typography {
+      padding: 80px 0;
+    }
   }
-}
 
-body.single {
-  section.hero .lay {
-    padding: 30px;
+  &.single {
+    .typography {
+      padding: 30px 0;
+    }
   }
 }
 
@@ -72,12 +76,10 @@ article {
   }
 
   &.information {
-    background-color: #fff;
   }
 
   &.sm {
     padding: 40px 0;
-    background-color: #fff;
 
     h3 {
       font-size: $font-lg;
@@ -87,17 +89,25 @@ article {
 }
 
 footer {
-  padding: 50px 0;
+  font-size: $font-sm;
+
+  .links {
+    border-top: 1px solid $color-base;
+    padding: 20px 0;
+
+    a {
+      color: darken($color-base, 40%);
+      text-decoration: underline;
+      margin: 0 10px;
+    }
+  }
+
+  .copy {
+    padding: 30px 0;
+  }
 }
 
 @media (max-width:767px) {
-  html {
-    font-size: 12px;
-  }
-
-  header.site-header .links {
-    text-align: center;
-  }
 }
 
 
