--- a/src/themes/vh/assets/sass/_helper.scss
+++ b/src/themes/vh/assets/sass/_helper.scss
@@ -25,3 +25,28 @@ a.block {
     padding: 0 5px;
   }
 }
+
+.ribbon {
+  display: inline-block;
+  width: 100%;
+  max-width: 200px;
+  position: relative;
+  margin: 0 -30px;
+  padding: 10px;
+  background-color: lighten($color-main, 10%);
+  color: #fff;
+  box-shadow: $box-shadow;
+
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 10px;
+    height: 10px;
+    border: 5px solid darken($color-main, 20%);
+    border-left: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+  }
+}
