--- a/src/themes/vh/assets/sass/_reset.scss
+++ b/src/themes/vh/assets/sass/_reset.scss
@@ -9,7 +9,9 @@ body {
   font-size: inherit;
   font-family: $font-stack;
   -webkit-font-smoothing: antialiased;
-  color: #333;
+  color: lighten(#333, 10%);
+  border-top: 5px solid $color-main;
+  border-bottom: 10px solid $color-main;
 }
 
 a {
@@ -20,7 +22,7 @@ a:hover,
 a:focus,
 a:active {
   text-decoration: none;
-  color: darken($color-main, 10%);
+  color: $color-accent;
 }
 
 h1 { font-size: 2.1rem; }
