Change accent color and ribbon design.

--- a/src/themes/vh/assets/sass/_variable.scss
+++ b/src/themes/vh/assets/sass/_variable.scss
@@ -4,7 +4,7 @@ $font-stack-accent: mplus-1p-regular;
 $font-sm: .8rem;
 $font-lg: 1.2rem;
 
-$color-accent: #e67e22;
+$color-accent: #f39c12;
 $color-main: #2980b9;
 $color-base: #eee;
 
