--- a/src/themes/vh/assets/sass/_helper.scss
+++ b/src/themes/vh/assets/sass/_helper.scss
@@ -37,9 +37,9 @@ a.block {
   position: relative;
   margin: 0 -30px;
   padding: 10px;
-  background-color: lighten($color-main, 10%);
+  background-color: lighten($color-accent, 10%);
   color: #fff;
-  box-shadow: 1px 2px 3px darken($color-base, 20%);
+  box-shadow: 1px 2px 2px darken($color-base, 10%);
 
   &:before {
     content: '';
@@ -49,7 +49,7 @@ a.block {
     bottom: -10px;
     width: 10px;
     height: 10px;
-    border: 5px solid darken($color-main, 20%);
+    border: 5px solid darken($color-accent, 20%);
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent;
   }
