--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -31,7 +31,7 @@ a:hover,
 a:focus,
 a:active {
   text-decoration: none;
-  color: #e67e22; }
+  color: #f39c12; }
 
 h1 {
   font-size: 2rem; }
@@ -86,9 +86,9 @@ a.block {
   position: relative;
   margin: 0 -30px;
   padding: 10px;
-  background-color: #409ad5;
+  background-color: #f5b043;
   color: #fff;
-  box-shadow: 1px 2px 3px #bbbbbb; }
+  box-shadow: 1px 2px 2px #d4d4d4; }
   .ribbon:before, section .information h3:before {
     content: '';
     display: block;
@@ -97,7 +97,7 @@ a.block {
     bottom: -10px;
     width: 10px;
     height: 10px;
-    border: 5px solid #164666;
+    border: 5px solid #976008;
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent; }
 
@@ -108,27 +108,36 @@ header.site-header h1, header.site-header a, header.site-header p {
   color: #000; }
 
 header.site-header nav .links {
-  padding-top: 20px; }
-  header.site-header nav .links .link .icon {
-    min-height: 30px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain; }
-  header.site-header nav .links .link.about .icon {
-    background-image: url(./images/icon/bird_128px.png); }
-  header.site-header nav .links .link.introduction .icon {
-    background-image: url(./images/icon/sheep_128px.png); }
-  header.site-header nav .links .link.examination .icon {
-    background-image: url(./images/icon/cat_128px.png); }
-  header.site-header nav .links .link.pricing .icon {
-    background-image: url(./images/icon/chicken_128px.png); }
-  header.site-header nav .links .link.trimming .icon {
-    background-image: url(./images/icon/dog_128px.png); }
-  header.site-header nav .links .link.hotel .icon {
-    background-image: url(./images/icon/parrot_128px.png); }
-  header.site-header nav .links .link h3 {
-    font-size: 1rem;
-    margin: 0; }
+  padding-top: 10px; }
+  @media (max-width: 767px) {
+    header.site-header nav .links {
+      border-top: 1px solid #eee; } }
+  header.site-header nav .links .link {
+    padding: 10px 0; }
+    @media (max-width: 767px) {
+      header.site-header nav .links .link {
+        background-color: rgba(238, 238, 238, 0.5);
+        border-radius: 3px; } }
+    header.site-header nav .links .link .icon {
+      min-height: 30px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain; }
+    header.site-header nav .links .link.about .icon {
+      background-image: url(./images/icon/bird_128px.png); }
+    header.site-header nav .links .link.introduction .icon {
+      background-image: url(./images/icon/sheep_128px.png); }
+    header.site-header nav .links .link.examination .icon {
+      background-image: url(./images/icon/cat_128px.png); }
+    header.site-header nav .links .link.pricing .icon {
+      background-image: url(./images/icon/chicken_128px.png); }
+    header.site-header nav .links .link.trimming .icon {
+      background-image: url(./images/icon/dog_128px.png); }
+    header.site-header nav .links .link.hotel .icon {
+      background-image: url(./images/icon/parrot_128px.png); }
+    header.site-header nav .links .link h3 {
+      font-size: 1rem;
+      margin: 0; }
 
 main.site-body {
   min-height: 700px; }
