--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -71,53 +71,57 @@ body {
   .hero {
     h2 {
       font-family: $font-stack-accent;
+      letter-spacing: 5px;
     }
   }
 
   &.home {
     .hero {
-      background-color: rgba($color-main, .2);
-      /*background-image: url(./images/bg.jpg);*/
-      /*background-size: cover;*/
-      /*background-position: center;*/
-
+      background-size: cover;
+      background-image: url(./images/bg.jpg);
+      background-position: 50% 60%;
 
       .typography {
-        padding: 100px 0;
+        padding: 120px 0;
       }
 
       h2 {
-        color: #000;
-      }
-    }
-  }
-
-  &.single,
-  &.page {
-    .hero {
-      background-color: $color-main;
-
-      .typography {
-        padding: 30px 0;
-
-        h2 {
-          color: #fff;
-        }
+        color: #fff;
       }
     }
   }
 }
 
 section {
+  header {
+    h2 {
+      position: relative;
+      margin: 0;
+      padding: 20px 0;
+      color: #000;
+      border-bottom: 2px solid $color-base;
+
+      &:before {
+        position: absolute;
+        bottom: -2px;
+        width: 30%;
+        content: '';
+        display: block;
+        border-bottom: 2px solid $color-main;
+      }
+    }
+  }
+
   .information {
     padding: 20px;
     padding-top: 10px;
     background-color: rgba($color-base, .5);
-    border-bottom: 3px solid $color-base;
+    box-shadow: 0 2px 0 $color-base;
     border-radius: $radius;
 
     h3 {
       font-size: 1rem;
+      max-width: 200px;
       @extend .ribbon;
     }
   }
@@ -126,6 +130,7 @@ section {
     border-bottom: 1px solid $color-base;
 
     h3 {
+      font-size: $font-lg;
       margin: 0;
       padding: 10px 0;
       color: #000;
@@ -137,7 +142,6 @@ section {
 
       h4 {
         color: #000;
-        font-weight: 900;
         font-size: 1rem;
         margin: 0;
       }
@@ -146,6 +150,7 @@ section {
 
   .map {
     h3 {
+      font-size: $font-lg;
       margin: 0;
       padding: 10px 0;
       color: #000;
