--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -11,6 +11,14 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: calm, gentle, cleanliness
 Text Domain: VH
  */
+@font-face {
+  font-family: mplus-1p-regular;
+  src: url("/wp-content/themes/vh/fonts/mplus-1p-regular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: mplus-1p-regular;
+  src: url("/wp-content/themes/vh/fonts/mplus-1p-regular.ttf") format("truetype"); }
+
 /* Reset */
 html {
   font-size: 14px; }
@@ -51,6 +59,10 @@ h5 {
 h6 {
   font-size: 1.1rem; }
 
+@font-face {
+  font-family: mplus-1p-regular;
+  src: url("/wp-content/themes/vh/fonts/mplus-1p-regular.ttf") format("truetype"); }
+
 .container-sm {
   max-width: 800px; }
 
@@ -82,7 +94,6 @@ a.block {
 .ribbon, section .information h3 {
   display: inline-block;
   width: 100%;
-  max-width: 200px;
   position: relative;
   margin: 0 -30px;
   padding: 10px;
@@ -97,7 +108,7 @@ a.block {
     bottom: -10px;
     width: 10px;
     height: 10px;
-    border: 5px solid #976008;
+    border: 5px solid #e08e0b;
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent; }
 
@@ -143,37 +154,46 @@ main.site-body {
   min-height: 700px; }
 
 body .hero h2 {
-  font-family: mplus-1p-regular; }
+  font-family: mplus-1p-regular;
+  letter-spacing: 5px; }
 
 body.home .hero {
-  background-color: rgba(41, 128, 185, 0.2);
-  /*background-image: url(./images/bg.jpg);*/
-  /*background-size: cover;*/
-  /*background-position: center;*/ }
+  background-size: cover;
+  background-image: url(./images/bg.jpg);
+  background-position: 50% 60%; }
   body.home .hero .typography {
-    padding: 100px 0; }
+    padding: 120px 0; }
   body.home .hero h2 {
-    color: #000; }
+    color: #fff; }
 
-body.single .hero, body.page .hero {
-  background-color: #2980b9; }
-  body.single .hero .typography, body.page .hero .typography {
-    padding: 30px 0; }
-    body.single .hero .typography h2, body.page .hero .typography h2 {
-      color: #fff; }
+section header h2 {
+  position: relative;
+  margin: 0;
+  padding: 20px 0;
+  color: #000;
+  border-bottom: 2px solid #eee; }
+  section header h2:before {
+    position: absolute;
+    bottom: -2px;
+    width: 30%;
+    content: '';
+    display: block;
+    border-bottom: 2px solid #2980b9; }
 
 section .information {
   padding: 20px;
   padding-top: 10px;
   background-color: rgba(238, 238, 238, 0.5);
-  border-bottom: 3px solid #eee;
+  box-shadow: 0 2px 0 #eee;
   border-radius: 3px; }
   section .information h3 {
-    font-size: 1rem; }
+    font-size: 1rem;
+    max-width: 200px; }
 
 section .post {
   border-bottom: 1px solid #eee; }
   section .post h3 {
+    font-size: 1.2rem;
     margin: 0;
     padding: 10px 0;
     color: #000; }
@@ -182,11 +202,11 @@ section .post {
     overflow: hidden; }
     section .post article h4 {
       color: #000;
-      font-weight: 900;
       font-size: 1rem;
       margin: 0; }
 
 section .map h3 {
+  font-size: 1.2rem;
   margin: 0;
   padding: 10px 0;
   color: #000; }
