--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -70,24 +70,19 @@ main.site-body {
 body {
   .hero {
     h2 {
+      color: #fff;
       font-family: $font-stack-accent;
       letter-spacing: 5px;
+      text-shadow: 0 1px 1px #000;
+      font-weight: 900;
     }
-  }
 
-  &.home {
-    .hero {
-      background-size: cover;
-      background-image: url(./images/bg.jpg);
-      background-position: 50% 60%;
+    background-size: cover;
+    background-image: url(./images/bg.jpg);
+    background-position: 50% 60%;
 
-      .typography {
-        padding: 120px 0;
-      }
-
-      h2 {
-        color: #fff;
-      }
+    .typography {
+      padding: 30px 0 210px 0;
     }
   }
 }
