--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -161,8 +161,7 @@ body .hero {
     color: #fff;
     font-family: mplus-1p-regular;
     letter-spacing: 5px;
-    text-shadow: 0 1px 1px #000;
-    font-weight: 900; }
+    text-shadow: 0 1px 1px #000; }
   body .hero .typography {
     padding: 30px 0 210px 0; }
 
@@ -201,6 +200,7 @@ section .post {
     height: 4rem;
     overflow: hidden; }
     section .post article h4 {
+      font-weight: 900;
       color: #000;
       font-size: 1rem;
       margin: 0; }
