--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -89,20 +89,10 @@ body {
 section {
   header {
     h2 {
-      position: relative;
+      @include color-line(2px, $color-main);
       margin: 0;
       padding: 20px 0;
       color: #000;
-      border-bottom: 2px solid $color-base;
-
-      &:before {
-        position: absolute;
-        bottom: -2px;
-        width: 30%;
-        content: '';
-        display: block;
-        border-bottom: 2px solid $color-main;
-      }
     }
   }
 
@@ -121,16 +111,17 @@ section {
   }
 
   .post {
-    border-bottom: 1px solid $color-base;
 
     h3 {
+      @include color-line(1px, $color-main);
       font-size: $font-lg;
       margin: 0;
-      padding: 10px 0;
+      padding: 10px 0 5px 0;
       color: #000;
     }
 
     article{
+      border-bottom: 1px solid $color-base;
       height: 4rem;
       overflow: hidden;
 
@@ -145,9 +136,10 @@ section {
 
   .map {
     h3 {
+      @include color-line(1px, $color-main);
       font-size: $font-lg;
       margin: 0;
-      padding: 10px 0;
+      padding: 10px 0 5px 0;
       color: #000;
     }
 
