--- a/src/themes/vh/assets/sass/_reset.scss
+++ b/src/themes/vh/assets/sass/_reset.scss
@@ -1,6 +1,5 @@
 @import '_import';
 
-/* Reset */
 html {
   font-size: 14px;
 }
@@ -33,4 +32,6 @@ h4 { font-size: 1.3rem; }
 h5 { font-size: 1.2rem; }
 h6 { font-size: 1.1rem; }
 
-
+hr {
+    margin: 0;
+}
