--- a/src/themes/vh/assets/sass/_helper.scss
+++ b/src/themes/vh/assets/sass/_helper.scss
@@ -36,9 +36,8 @@ a.block {
   position: relative;
   margin: 0 -30px;
   padding: 10px;
-  background-color: lighten($color-accent, 10%);
+  background-color: lighten($color-accent, 0%);
   color: #fff;
-  box-shadow: 1px 2px 2px darken($color-base, 10%);
 
   &:before {
     content: '';
@@ -48,9 +47,21 @@ a.block {
     bottom: -10px;
     width: 10px;
     height: 10px;
-    border: 5px solid darken($color-accent, 5%);
+    border: 5px solid darken($color-accent, 10%);
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent;
+  }
+
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: -30px;
+    height: 10px;
+    border: 25px solid lighten($color-accent, 0%);
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid transparent;
   }
 }
 
