--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -99,9 +99,8 @@ a.block {
   position: relative;
   margin: 0 -30px;
   padding: 10px;
-  background-color: #f5b043;
-  color: #fff;
-  box-shadow: 1px 2px 2px #d4d4d4; }
+  background-color: #f39c12;
+  color: #fff; }
   .ribbon:before, section .information h3:before {
     content: '';
     display: block;
@@ -110,9 +109,19 @@ a.block {
     bottom: -10px;
     width: 10px;
     height: 10px;
-    border: 5px solid #e08e0b;
+    border: 5px solid #c87f0a;
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent; }
+  .ribbon:after, section .information h3:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: -30px;
+    height: 10px;
+    border: 25px solid #f39c12;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid transparent; }
 
 header.site-header h1 {
   font-family: mplus-1p-regular; }
@@ -189,7 +198,7 @@ section .information {
   border-radius: 3px; }
   section .information h3 {
     font-size: 1rem;
-    max-width: 200px; }
+    max-width: 100px; }
 
 section .post h3 {
   position: relative;
