--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -105,7 +105,7 @@ section {
 
     h3 {
       @extend .ribbon;
-      font-size: 1rem;
+      font-size: 14px;
       max-width: 100px;
     }
   }
