--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -194,7 +194,8 @@ section .information {
   padding: 20px;
   padding-top: 10px;
   background-color: rgba(238, 238, 238, 0.5);
-  box-shadow: 0 2px 0 #eee;
+  border: 1px solid #eee;
+  box-shadow: 0 1px 0 #eee;
   border-radius: 3px; }
   section .information h3 {
     font-size: 14px;
