--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -244,6 +244,8 @@ body.single section header h2, body.page section header h2 {
     content: '';
     display: block;
     border-bottom: 2px solid #2980b9; }
+  body.single section header h2 small, body.page section header h2 small {
+    display: block; }
 
 footer {
   font-size: 0.8rem; }
@@ -259,6 +261,4 @@ footer {
 
 @media (max-width: 767px) {
   html {
-    font-size: 12px; }
-  small {
-    display: block; } }
+    font-size: 12px; } }
